--- a/src/index.css
+++ b/src/index.css
@@ -39,17 +39,43 @@ body {
   display: flex;
 }
 
+.portrait-card {
+  box-shadow: 0 4px 8px 0 #000000;
+  transition: 0.3s;
+  background-color: rgba(255, 255, 255, 0.16);
+  border-radius: 5px;
+  text-align: center;
+  max-height: 550px;
+  max-width: 800px;
+  padding: 20px;
+  margin-top: 0;
+  margin-right: 30px;
+}
+
 .portrait {
   max-width: 100%;
   height: 700px;
   border-radius: 8px;
   display: block;
-  margin-top: 150px;
+  margin-top: 50px;
   box-shadow: 0 4px 8px 0 #000000;
   transition: 0.3s;
   background-color: #333;
   margin-left: 100px;
+  margin-right: auto;
 
+}
+
+.about-portrait {
+  max-width: 100%;
+  height: 700px;
+  border-radius: 8px;
+  display: block;
+  margin-top: 50px;
+  box-shadow: 0 4px 8px 0 #000000;
+  transition: 0.3s;
+  background-color: #333;
+  margin-left: auto;
 }
 
 .site-title {
@@ -92,10 +118,14 @@ body {
 
 .personal-container{
   color: #FFFFF0;
-  margin-top: 200px;
+  margin-top: 100px;
   padding-left: 1rem;
   margin-left: 100px;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .personal-title{
@@ -109,8 +139,8 @@ body {
 .project-container {
   padding: 2px 16px;
   margin: 0;
-  list-style: none;
   display: flex;
+  list-style: none;
   gap: 1rem;
   color: #FFFFF0;
   background-color: rgba(255, 255, 255, 0.07);
@@ -169,6 +199,11 @@ a {
 .about-container {
   color: #FFFFF0;
   display: flex;
+  background-color: rgba(255, 255, 255, 0.07);
+  min-height: 100vh;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .about-card {
@@ -178,11 +213,32 @@ a {
   border-radius: 5px;
   text-align: left;
   max-height: 550px;
-  max-width: 800px;
+  max-width: 600px;
   padding: 20px;
   margin-top: 200px;
-  margin-left: 100px;
+  margin-left: auto;
+  margin-right: auto;
   font-family:Arial, Helvetica, sans-serif;
+}
+
+.about-smallerCard {
+  box-shadow: 0 4px 8px 0 #000000;
+  transition: 0.3s;
+  background-color: rgba(255, 255, 255, 0.16);
+  border-radius: 5px;
+  text-align: left;
+  max-height: 550px;
+  max-width: 500px;
+  padding: 20px;
+  margin-top: 50px;
+  margin-left: 170px;
+  margin-right: auto;
+  font-family:Arial, Helvetica, sans-serif;
+  margin-bottom: 10px;
+}
+
+.about-title {
+  text-align: center;
 }
 
 .home-card {
@@ -217,6 +273,16 @@ a {
   margin: auto;
 }
 
+.software-icon {
+  max-width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  margin: auto;
+}
+
 .TE-icon:hover {
   transform: scale(1.05); 
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.7); 
@@ -225,4 +291,8 @@ a {
 .linkedin-icon:hover {
   transform: scale(1.05); 
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.7); 
+}
+
+.icon-container {
+  display: flex;
 }
