--- a/src/index.css
+++ b/src/index.css
@@ -436,7 +436,7 @@ body {
 @media screen and (max-width: 1368px) {
   .portrait {
     height: 500px;
-    margin-left: auto;
+    margin-left: 20px;
     margin-right: auto;
     margin-bottom: auto;
   }
@@ -454,8 +454,7 @@ body {
 
   .portrait-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+
   }
 
   .personal-title {
