--- a/src/index.css
+++ b/src/index.css
@@ -536,6 +536,107 @@ body {
 
 }
 
+@media screen and (max-width: 1826px) {
+  .portrait {
+    height: 700px;
+    margin-left: 100px;
+    margin-right: auto;
+    margin-bottom: auto;
+  }
+
+  .personal-container {
+    margin-bottom: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+  }
+
+  .home-card {
+    margin-left: 300px;
+    margin-right: auto;
+    margin-top: 100px;
+  }
+
+  .portrait-container {
+    display: flex;
+
+  }
+
+  .personal-name {
+    font-size: 56px;
+  }
+
+  .portrait-card{
+    font-size: larger;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto
+  }
+
+.about-portrait {
+  max-width: 100%;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.about-card {
+  padding: 20px;
+  font-size: medium;
+  margin: auto;
+}
+
+.about-smallerCard {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.about-title {
+  font-size: medium;
+}
+
+.about-p {
+  font-size: small;
+}
+
+.software-icon {
+  max-width: 100%;
+  height: 60px;
+}
+
+body {
+  background-color: #121212;
+  width:auto
+}
+
+.project-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:flex-start;
+}
+
+.card {
+  margin-top: 20px;
+  margin-right:auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+
+}
+
+.project-title {
+  font-size: x-large;
+}
+
+.project-p {
+  font-size: medium;
+}
+
+
+}
+
 @media screen and (max-width: 912px) {
   .portrait {
     height: 500px;
