--- a/src/index.css
+++ b/src/index.css
@@ -353,7 +353,39 @@ a {
   min-height: 100vh;
 }
 
+.contact-card {
+  box-shadow: 0 4px 8px 0 #000000;
+  transition: 0.3s;
+  background-color: rgba(255, 255, 255, 0.16);
+  border-radius: 5px;
+  text-align: center;
+  max-height: 550px;
+  max-width: 800px;
+  padding: 20px;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
 
+.email-container {
+  display: flex;
+}
+
+.email {
+  font-weight: bold;
+}
+
+.info {
+  margin-left: 5px;
+}
+
+.phone-container {
+  display: flex;
+}
+
+.phone {
+  font-weight: bold;
+}
 
 .w3-badge {
   height: 13px;
@@ -490,7 +522,7 @@ body {
 }
 }
 
-@media screen and (max-width: 1368px) {
+@media screen and (max-width: 1633px) {
   .portrait {
     height: 500px;
     margin-left: 20px;
