--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,8 @@ body {
   display: flex;
   justify-content: center;
   min-height: 100vh;
+  flex-wrap: wrap;
+
 }
 
 .portrait-container {
@@ -353,38 +355,46 @@ a {
   min-height: 100vh;
 }
 
-.contact-card {
-  box-shadow: 0 4px 8px 0 #000000;
-  transition: 0.3s;
+.contact-form {
+  display: block;
   background-color: rgba(255, 255, 255, 0.16);
-  border-radius: 5px;
-  text-align: center;
-  max-height: 550px;
-  max-width: 800px;
-  padding: 20px;
-  margin-top: 0;
+  box-shadow: 0 4px 8px 0 #000000;
+  min-width: 600px;
+  margin-bottom: 40px;
+  padding: 25px 40px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 40px;
+  border-radius: 8px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.email-container {
+form input, textarea {
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 35px;
+  margin: 15px auto;
+  background-color: #FFFFF0;
+  border: 1px solid #FFFFF0;
 }
 
-.email {
-  font-weight: bold;
+form h1 {
+  color: #FFFFF0; 
 }
 
-.info {
-  margin-left: 5px;
+form span {
+  color: #BB86FC;
 }
 
-.phone-container {
-  display: flex;
-}
-
-.phone {
-  font-weight: bold;
+form button {
+  height: 30px;
+  width: 80px;
+  align-items: center;
+  border: none;
+  background-color: #BB86FC;
+  color: #FFFFF0;
+  cursor: pointer;
 }
 
 .w3-badge {
@@ -452,7 +462,11 @@ a {
   }
 
   .personal-container {
-    margin-bottom: 500px;
+    margin-bottom: 100px;
+  }
+
+  .home-card {
+    margin-bottom: 30px;
   }
 
   .portrait {
@@ -519,6 +533,10 @@ body {
 
 .project-p {
   font-size: medium;
+}
+
+.contact-form {
+  min-width: auto;
 }
 }
 
@@ -735,7 +753,7 @@ body {
   }
 
   .personal-container {
-    margin-bottom: 400px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
@@ -749,6 +767,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+  }
+
+  .contact-form {
+    width: auto;
   }
 }
 
@@ -814,6 +836,10 @@ body {
   
   .project-p {
     font-size: small;
+  }
+
+  .contact-form {
+    width: auto;
   }
 }
 
