--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
 * {
   box-sizing: border-box;
 }
@@ -67,6 +69,10 @@ body {
 
 }
 
+.about-p {
+  font-family: 'Poppins';
+}
+
 .about-portrait {
   max-width: 100%;
   height: 700px;
@@ -122,7 +128,7 @@ body {
   margin-top: 100px;
   padding-left: 1rem;
   margin-left: 100px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins';
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
@@ -280,7 +286,7 @@ a {
   margin-top: 200px;
   margin-left: auto;
   margin-right: auto;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins';
 }
 
 .about-smallerCard {
@@ -295,13 +301,14 @@ a {
   margin-top: 50px;
   margin-left: 170px;
   margin-right: auto;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins';
   margin-bottom: 10px;
 
 }
 
 .about-title {
   text-align: center;
+  font-family: 'Poppins';
 }
 
 .home-card {
@@ -313,6 +320,7 @@ a {
   max-height: 550px;
   max-width: 800px;
   padding: 20px;
+  margin-bottom: 30px;
 }
 
 .linkedin-icon {
@@ -376,7 +384,7 @@ a {
   margin-left: auto;
   margin-top: 40px;
   border-radius: 8px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins';
 }
 
 form input, textarea {
@@ -433,6 +441,11 @@ form button {
   z-index: 1000;
 }
 
+.project-title {
+  font-family: 'Poppins';
+}
+
+
 
 @media screen and (min-width: 2210px) {
   .nav {
@@ -469,7 +482,7 @@ form button {
     padding: 20px;
     margin-left: 180px;
     margin-right: auto;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins';
   }
 
   .about-topcontainer {
