--- a/src/index.css
+++ b/src/index.css
@@ -74,15 +74,15 @@ body {
 }
 
 .about-portrait {
-  max-width: 100%;
-  height: 700px;
+  width: 400px;
+  height: 500px;
   border-radius: 8px;
-  display: block;
   margin-top: 50px;
   box-shadow: 0 4px 8px 0 #000000;
   transition: 0.3s;
   background-color: #333;
-  margin-left: auto;
+  margin-left: 20px;
+  margin-right: 10px;
 }
 
 .site-title {
@@ -258,11 +258,12 @@ a {
 
 .about-topcontainer {
   color: #FFFFF0;
-  display: flex;
   background-color: rgba(255, 255, 255, 0.07);
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  margin: auto;
+}
+
+.about-container {
+  display: flex;
 }
 
 .about-middlecontainer {
@@ -283,10 +284,11 @@ a {
   max-height: 550px;
   max-width: 600px;
   padding: 20px;
-  margin-top: 200px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 10px;
   font-family: 'Poppins';
+  font-size:larger;
 }
 
 .about-smallerCard {
@@ -299,7 +301,7 @@ a {
   max-width: 500px;
   padding: 20px;
   margin-top: 50px;
-  margin-left: 170px;
+  margin-left: a;
   margin-right: auto;
   font-family: 'Poppins';
   margin-bottom: 10px;
@@ -461,13 +463,13 @@ form button {
   }
   
   .about-portrait {
-    max-width: 100%;
-    height: 700px;
+    max-width: 500px;
+    height: 600px;
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 #000000;
     transition: 0.3s;
     background-color: #333;
-    margin-left: 180px;
+    margin-left: 20px;
 
   }
 
@@ -480,19 +482,17 @@ form button {
     max-height: 550px;
     max-width: 600px;
     padding: 20px;
-    margin-left: 180px;
-    margin-right: auto;
+    margin-left: 20px;
+    margin-right: 20px;
     font-family: 'Poppins';
   }
 
   .about-topcontainer {
     color: #FFFFF0;
-    display: flex;
+    
     background-color: rgba(255, 255, 255, 0.07);
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    margin-right: 10px;
+
+
   }
 
   .about-middlecontainer {
@@ -518,16 +518,287 @@ form button {
   }
 }
 
+
+
+@media screen and (max-width: 1826px) {
+  .portrait {
+    height: 700px;
+    margin-left: 100px;
+    margin-right: auto;
+    margin-bottom: auto;
+  }
+
+  .personal-container {
+    margin-bottom: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+  }
+
+  .home-card {
+    margin-left: 300px;
+    margin-right: auto;
+    margin-top: 100px;
+  }
+
+  .portrait-container {
+    display: flex;
+
+  }
+
+  .personal-name {
+    font-size: 56px;
+  }
+
+  .portrait-card{
+    font-size: larger;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto
+  }
+
+.about-portrait {
+  width: 100%;
+  height: 500px;
+  margin-left: 20px;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.about-card {
+  padding: 20px;
+  font-size: medium;
+  margin-left: 20px;
+}
+
+.about-smallerCard {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.about-title {
+  font-size: medium;
+}
+
+.about-p {
+  font-size: small;
+}
+
+.software-icon {
+  max-width: 100%;
+  height: 60px;
+}
+
+body {
+  background-color: #121212;
+  width:auto
+}
+
+.project-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:flex-start;
+}
+
+.card {
+  margin-top: 20px;
+  margin-right:auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+
+}
+
+.project-title {
+  font-size: x-large;
+}
+
+.project-p {
+  font-size: medium;
+}
+
+
+}
+
+@media screen and (max-width: 1633px) {
+  .portrait {
+    height: 500px;
+    margin-left: 20px;
+    margin-right: auto;
+    margin-bottom: auto;
+  }
+
+  .personal-container {
+    margin-bottom: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+  }
+
+  .home-card {
+    margin: auto;
+  }
+
+  .portrait-container {
+    display: flex;
+
+  }
+
+  .personal-title {
+    font-size: larger;
+  }
+
+  .personal-name {
+    font-size: xx-large;
+  }
+
+  .portrait-card{
+    font-size: larger;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto
+  }
+
+  .about-topcontainer {
+    margin: 0px
+  }
+
+.about-portrait {
+  width: 400px;
+  height: 500px;
+  margin-left: 20px;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.about-card {
+  padding: 20px;
+  font-size: medium;
+  margin-left: 20px;
+}
+
+.about-smallerCard {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+}
+
+.about-title {
+  font-size: medium;
+}
+
+.about-p {
+  font-size: small;
+}
+
+.software-icon {
+  max-width: 100%;
+  height: 60px;
+}
+
+body {
+  background-color: #121212;
+  width:auto
+}
+
+.project-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:flex-start;
+}
+
+.card {
+  margin-top: 20px;
+  margin-right:auto;
+  margin-left: auto;
+  margin-bottom: 20px;
+
+}
+
+.project-title {
+  font-size: x-large;
+}
+
+.project-p {
+  font-size: medium;
+}
+
+
+}
+
+@media screen and (max-width: 922px) {
+  
+  .about-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .portrait {
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+  }
+
+  .about-topcontainer {
+    margin: 0px;
+    padding: 0px;
+    width: 922px;
+  }
+
+  .about-portrait {
+    width: 300px;
+    height: 400px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
+    margin-bottom: auto;
+  }
+
+  .about-card {
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .personal-container {
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+  }
+
+  .home-card {
+    margin: auto;
+  }
+
+  .portrait-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .contact-form {
+    width: auto;
+  }
+}
+
 @media screen and (max-width: 844px) {
   .nav {
     gap: 1rem;
   }
 
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .about-portrait {
-  max-width: 100%;
+  width: 300px;
   height: 400px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 10px;
   margin-top: 20px;
   margin-bottom: auto;
 }
@@ -584,243 +855,13 @@ body {
 }
 }
 
-@media screen and (max-width: 1633px) {
-  .portrait {
-    height: 500px;
-    margin-left: 20px;
-    margin-right: auto;
-    margin-bottom: auto;
-  }
-
-  .personal-container {
-    margin-bottom: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-  }
-
-  .home-card {
-    margin: auto;
-  }
-
-  .portrait-container {
-    display: flex;
-
-  }
-
-  .personal-title {
-    font-size: larger;
-  }
-
-  .personal-name {
-    font-size: xx-large;
-  }
-
-  .portrait-card{
-    font-size: larger;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto
-  }
-
-.about-portrait {
-  max-width: 100%;
-  height: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
-
-.about-card {
-  padding: 20px;
-  font-size: medium;
-  margin: auto;
-}
-
-.about-smallerCard {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-}
-
-.about-title {
-  font-size: medium;
-}
-
-.about-p {
-  font-size: small;
-}
-
-.software-icon {
-  max-width: 100%;
-  height: 60px;
-}
-
-body {
-  background-color: #121212;
-  width:auto
-}
-
-.project-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:flex-start;
-}
-
-.card {
-  margin-top: 20px;
-  margin-right:auto;
-  margin-left: auto;
-  margin-bottom: 20px;
-
-}
-
-.project-title {
-  font-size: x-large;
-}
-
-.project-p {
-  font-size: medium;
-}
-
-
-}
-
-@media screen and (max-width: 1826px) {
-  .portrait {
-    height: 700px;
-    margin-left: 100px;
-    margin-right: auto;
-    margin-bottom: auto;
-  }
-
-  .personal-container {
-    margin-bottom: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-  }
-
-  .home-card {
-    margin-left: 300px;
-    margin-right: auto;
-    margin-top: 100px;
-  }
-
-  .portrait-container {
-    display: flex;
-
-  }
-
-  .personal-name {
-    font-size: 56px;
-  }
-
-  .portrait-card{
-    font-size: larger;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto
-  }
-
-.about-portrait {
-  max-width: 100%;
-  height: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
-
-.about-card {
-  padding: 20px;
-  font-size: medium;
-  margin: auto;
-}
-
-.about-smallerCard {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
-}
-
-.about-title {
-  font-size: medium;
-}
-
-.about-p {
-  font-size: small;
-}
-
-.software-icon {
-  max-width: 100%;
-  height: 60px;
-}
-
-body {
-  background-color: #121212;
-  width:auto
-}
-
-.project-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:flex-start;
-}
-
-.card {
-  margin-top: 20px;
-  margin-right:auto;
-  margin-left: auto;
-  margin-bottom: 20px;
-
-}
-
-.project-title {
-  font-size: x-large;
-}
-
-.project-p {
-  font-size: medium;
-}
-
-
-}
-
-@media screen and (max-width: 912px) {
-  .portrait {
-    height: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-  }
-
-  .personal-container {
-    margin-bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-  }
-
-  .home-card {
-    margin: auto;
-  }
-
-  .portrait-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .contact-form {
-    width: auto;
-  }
-}
-
 @media screen and (max-width: 280px)  {
   .portrait {
     height: 300px;
+  }
+
+  .software-icon {
+    height: 40px;
   }
 
   .personal-container{
@@ -843,10 +884,12 @@ body {
   }
 
   .about-portrait {
-    height: 400px;
+    height: 300px;
+    width: 200px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: auto;
   }
+
   .nav {
     gap: 0.1rem;
     padding: 0%;
