--- a/src/index.css
+++ b/src/index.css
@@ -377,16 +377,16 @@ a {
 
 .contact-form {
   display: block;
-  background-color: rgba(255, 255, 255, 0.16);
-  box-shadow: 0 4px 8px 0 #000000;
   min-width: 600px;
-  margin-bottom: 40px;
   padding: 25px 40px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 40px;
-  border-radius: 8px;
   font-family: 'Poppins';
+  background-color: #333;
+}
+
+.contact-me {
+  text-align: center;
 }
 
 form input, textarea {
